--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node ./app.js"
+      "start": "node ./app.js",
+    "heroku-postbuild":"cd client && npm install && npm install --only=dev --no-shrinkwrap && npm build",
+    "client":"cd client && yarn start",
+    "dev":"concurrently --kill-others-on-fail\"yarn server\"\"yarn client\"",
+    "dev:server":"cd client && yarn build &&cd ..&&yarn start",
+    "start":"node app.js",
+    "heroku-postbuild":"cd client &&npm install && npm install --only=dev -- no-shrinkwrap && npm run build"
   },
   "author": "smitha",
   "license": "ISC",
