--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node ./app.js"
+      "start": "node app.js"
   },
   "author": "smitha",
   "license": "ISC",
   "keywords": [],
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "~4.17.1"
   }
 }
