--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
       "start": "node app.js"
+    "start":"react-scripts start",
+    "build":"react-scripts build",
+    "test":"react-scripts test",
+    "eject":"react-scripts eject"
   },
   "author": "smitha",
   "license": "ISC",
