--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node app.js",
-   
-    "build":"react-scripts build",
-    "test":"react-scripts test",
-    "eject":"react-scripts eject"
+      "start": "node app.js"
   },
   "author": "smitha",
   "license": "ISC",
