--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node" : "14.15.3"
   },
   "scripts": {
-      "start": "node app.js"
+      "start": "node app.js",
+    "build":"webpack"
   },
   "author": "smitha",
   "license": "ISC",
