--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
       "start": "node app.js",
-    "build":"webpack"
+    "build":"ng build"
   },
   "author": "smitha",
   "license": "ISC",
