--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "node" : "14.15.3"
   },
   "scripts": {
-      "start": "node app.js",
-    "build":"ng build"
+      "start": "node app.js"
   },
   "author": "smitha",
   "license": "ISC",
