--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node" : "14.15.3"
   },
   "scripts": {
+   "test": "echo \"Error: no test specified\" && exit 1", 
       "start": "node app.js"
   },
   "author": "smitha",
